--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,127 @@
 .App {
   text-align: center;
+  max-width: 330px;
+  height: 680
+px;
+  border-radius: 10px;
+  font-family: "Inter", sans-serif;
+  margin: 44px auto;
+  border: 1px solid black;
+  background-color: #f5f5f5;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.--photo-container {
+  margin: auto;
+  width: 330px;
+  height: 330px;
+  background-image: url("../src/images/andres-foto-edit.png");
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px 10px 0px 0px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.--name-name {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 25px;
+  line-height: 30px;
+  text-align: center;
+  color: #2b283a;
+  margin-top: 20px;
+  margin-bottom: -10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.--name-position {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12.8px;
+  line-height: 15px;
+  text-align: center;
+  color: #e2b1b0;
+}
+.--name-portfolio {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 150%;
+  text-align: center;
+  color: #4a4e74;
+  margin-top: -10px;
+}
+.buttons-cont {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  justify-content: space-evenly;
+  margin-top: 17px;
+}
+.buttons-cont > button {
+  width: 115px;
+  height: 34px;
+  background: #ffffff;
+  border: 1px solid #d1d5db;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 6px;
+}
+.buttons-cont > button > a {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  text-decoration: none;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #374151;
+}
+.buttons-cont > button > a > img {
+  width: 15px;
+  height: 15px;
+  padding-right: 5px;
+}
+#btn-linkedin{
+  background-color: #297FE5;
+  
+}
+#btn-linkedin a, #btn-linkedin img{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.--about-cont {
+  text-align: left;
+ margin: 0 35px;
 }
+.--about-cont h3{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 16px;
+line-height: 150%;
+color: #2B283A;
+margin-bottom: -10px;
+}
+.--about-cont p{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 10.24px;
+line-height: 150%;
+color: #4A4E74;}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+footer{
+  margin-top: 15px;
+width: 330px;
+height: 44px;
+background: #D5D4D8;
+border-radius: 0px 0px 10px 10px;
+display: flex;
+justify-content: space-evenly;
+align-items: center;
+}
+footer a i{
+  color: grey;
+  
+  width: 50px;
 }
