--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center;
   max-width: 330px;
-  height: 680
-px;
+  height: 680 px;
   border-radius: 10px;
   font-family: "Inter", sans-serif;
   margin: 44px auto;
@@ -81,47 +80,47 @@ px;
   height: 15px;
   padding-right: 5px;
 }
-#btn-linkedin{
-  background-color: #297FE5;
-  
+#btn-linkedin {
+  background-color: #297fe5;
 }
-#btn-linkedin a, #btn-linkedin img{
+#btn-linkedin a,
+#btn-linkedin img {
   color: white;
 }
 .--about-cont {
   text-align: left;
- margin: 0 35px;
+  margin: 0 35px;
 }
-.--about-cont h3{
-  font-family: 'Inter';
-font-style: normal;
-font-weight: 700;
-font-size: 16px;
-line-height: 150%;
-color: #2B283A;
-margin-bottom: -10px;
+.--about-cont h3 {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  color: #2b283a;
+  margin-bottom: -10px;
 }
-.--about-cont p{
-font-family: 'Inter';
-font-style: normal;
-font-weight: 400;
-font-size: 10.24px;
-line-height: 150%;
-color: #4A4E74;}
+.--about-cont p {
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10.24px;
+  line-height: 150%;
+  color: #4a4e74;
+}
 
-
-footer{
+footer {
   margin-top: 15px;
-width: 330px;
-height: 44px;
-background: #D5D4D8;
-border-radius: 0px 0px 10px 10px;
-display: flex;
-justify-content: space-evenly;
-align-items: center;
+  width: 330px;
+  height: 44px;
+  background: #d5d4d8;
+  border-radius: 0px 0px 10px 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
-footer a i{
+footer a i {
   color: grey;
-  
+
   width: 50px;
 }
